# contour_toolpath

./: main.py  pyproject.toml
contour_toolpath/: algorithm.py  importer.py  mesh.py  visualization.py  window.py  window_propagation.py  window_propagation_test.py  window_test.py
mathutil/: vector.py
