[project]
name = "contour-toolpath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyterlab-widgets>=3.0.14",
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
    "pyright>=1.1.399",
    "trimesh>=4.6.8",
]


[tool.pyright]
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]


